# personal_site

./: .gitignore  .pre-commit-config.yaml  INFRA_AUDIT.md  Makefile  README.md
.github/workflows/: ci.yml  debug-ssh.yml  deploy.yml
docs/: PROJECT_PLAN.md  TASK_CONTACTS_API.md  integration_iterations.md
infra/: .env.example  docker-compose.ansible.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
infra/configs/: Caddyfile
infra/scripts/: init-db.sh
scripts/: pre-commit  pre-push
services/backend/: .coverage  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 678705771ddf_initial_schema.py  seed_contacts_data.py  seed_profile_content.py
services/backend/src/app/: config.py  database.py  main.py
services/backend/src/app/admin/: __init__.py  auth.py  views.py
services/backend/src/app/api/v1/: health.py  profile.py
services/backend/src/app/models/: __init__.py  contact.py  mixins.py  project.py  resume.py  stack.py  testimonial.py  work_experience.py
services/backend/src/app/schemas/: __init__.py  profile.py
services/backend/tests/: conftest.py
services/backend/tests/api/: test_health.py  test_profile.py
services/backend/tests/integration/: __init__.py  test_profile_integration.py
services/frontend/: .gitignore  Dockerfile  README.md  astro.config.mjs  manage.sh  package-lock.json  (+3 more)
site/: README.md  astro.config.mjs  docker-compose.yml  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
(+54 files in other folders)
